@@ -18,7 +18,8 @@ isdebugged(fun, signature = NULL)
 debuggingState(on = NULL)
 }
 \arguments{
-  \item{fun}{any interpreted \R function.}
+  \item{fun}{any interpreted \R function or a character string naming
+    one.}
   \item{text}{a text string that can be retrieved when the browser is entered.}
   \item{condition}{a condition that can be retrieved when the browser is
     entered.}
